# kenya_gazette_mistral_pipeline

./: .gitignore  LICENSE  PLAN.md  PROGRESS.md  README.md  gazette_etl_prototype.ipynb  gazette_iteration_pipeline.ipynb  pyproject.toml
docs/: data-quality-confidence-scoring.md  envelope-field-tree.json  known-issues.md  library-contract-v1.md  library-roadmap-v1.md
examples/: gazette_package_driver.ipynb  tiny_replay.raw.json
gazette_mistral_pipeline/: __init__.py  __version__.py  bundle_writer.py  confidence_scoring.py  envelope_builder.py  mistral_ocr.py  notice_parsing.py  page_normalization.py  public_api.py  schema.py  source_loading.py
scripts/: install_smoke.py
specs/: F01-project-sop-scaffold.md  F02-package-skeleton.md  F03-pydantic-models.md  F04-pdf-source-loading.md  F05-mistral-api-pass.md  F06-normalize-and-stitch-pages.md  F07-notice-and-table-parsing.md  F08-confidence-and-spatial-hints.md  F09-build-validated-envelope.md  F10-public-api-and-bundle-writer.md  F11-json-schema-export.md  F12-installable-package-smoke-test.md  F13-notebook-driver-cleanup.md  F14-live-local-pdf-upload.md  F15-clean-page-running-headers.md  F16-exclude-post-notice-tail.md  F17-add-table-notice-provenance.md  F18-mistral-reliability-and-usage.md  SOP.md
tests/: test_bundle_writer.py  test_cached_mistral_regression.py  test_confidence_scoring.py  test_envelope_builder.py  test_install_smoke.py  test_mistral_ocr.py  test_models.py  test_notebook_examples.py  test_notice_parsing.py  test_package_skeleton.py  test_page_normalization.py  test_public_api.py  test_schema_export.py  (+1 more)
(+18 files in other folders)
